# grpc-gateway

./: README.md
examples/internal/integration/: BUILD.bazel  editions_test.go
examples/internal/proto/editions/: BUILD.bazel  editions_test.proto
examples/internal/proto/examplepb/: BUILD.bazel  echo_editions.proto  features_editions.proto
internal/codegenerator/: supported_features.go
internal/descriptor/: registry.go  types.go
internal/editions/: editions.go
protoc-gen-grpc-gateway/: main.go
protoc-gen-grpc-gateway/internal/gengateway/: generator.go  template.go
protoc-gen-openapiv2/: main.go
